Inclusão da grade final e todos os palestrantes
Reescrita da apresentação do evento
Inclusão do StartupMS como apoio

--- a/css/screen.css
+++ b/css/screen.css
@@ -108,6 +108,16 @@ h5{
 	margin:10px;
 }
 
+a, a:visited{
+	text-decoration: none;
+	color: #4BA4A4;
+	font-weight: bold;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
 .contatotexto{
 	margin-top:5px;
 	text-align: center
